# hands-on-rust

./: Cargo.toml  readme.md
resources/: template.ron
src/: chasing.rs  collision.rs  combat.rs  components.rs  constants.rs  coords.rs  dijkstra.rs  fov.rs  gameover.rs  hud.rs  items.rs  main.rs  map.rs  map_builder.rs  movement.rs  player.rs  random_move.rs  spawner.rs
src/hud/: enemy_hp.rs  inventory.rs  level.rs  names.rs  player_hp.rs
src/map_builder/: automata.rs  drunkard.rs  empty.rs  prefab.rs  rooms.rs  themes.rs
src/spawner/: template.rs
