[package]
name = "dungeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
rand = "0.8.5"
iyes_loopless = "0.6.1"
arrayvec = "0.7.2"
bracket-geometry = "0.8.3"
serde = { version = "1.0.140", features = ["derive"] }
ron = "0.7.1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
